# DICE

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  job-examples.md  operations.md  packaging.md  plugin-development.md  roadmap.md
src/dice/: __init__.py  __main__.py
src/dice/adapters/: __init__.py  base.py  evm.py  factory.py  mock.py  profiles.py
src/dice/app/: main.py
src/dice/core/: logging.py  manager.py  models.py  preflight.py  registry.py  secrets.py  state.py  storage.py  validation.py  workflow.py
src/dice/execution/: actions.py  broadcaster.py  builder.py  executor.py  signer.py  simulation.py
src/dice/jobs/: __init__.py  balance_trigger.py  base.py  contract_call.py  custom_workflow.py  event_trigger.py  scheduled_transfer.py  stake_sweep.py  templates.py  token_sweep.py  wallet_watch.py
src/dice/service/: __init__.py  client.py  daemon.py  server.py
src/dice/ui/: dashboard.py
src/dice/watcher/: __init__.py  runner.py  triggers.py
tests/: test_actions.py  test_adapters.py  test_manager.py  test_preflight.py  test_registry.py  test_secrets.py  test_service.py  test_simulation.py  test_storage.py  test_validation.py
